login skeleton session

--- a/maxonts/src/app.html
+++ b/maxonts/src/app.html
@@ -7,9 +7,9 @@
 
     <section class="container-fluid d-flex flex-row">
 
-      <sidebar class="col-3 "></sidebar>
+      <sidebar class="col-4 "></sidebar>
 
-      <router-view class="col-8">
+      <router-view class="col-8 p-5">
       </router-view>
 
     </section>
