--- a/maxonts/src/login/login.html
+++ b/maxonts/src/login/login.html
@@ -1,14 +1,14 @@
 <template>
   <div class="login container d-flex justify-content-center align-items-center">
     <div class="container border border-dark d-flex flex-column">
-      <h4>Iniciar Sesion</h4>
+      <h4>Iniciar Sesion</h4> <a route-href="register"> To register page </a>
       <form>
         <div class="mb-3">
-          <label for="email" class="form-label">Username</label>
+          <label for="email" class="form-label">Nombre de Usuario</label>
           <input type="email" class="form-control" value.bind="username">
         </div>
         <div class="mb-3">
-          <label for="password" class="form-label">Password</label>
+          <label for="password" class="form-label">Contraseña</label>
           <input type="password" class="form-control" value.bind="password">
         </div>
 
