--- a/maxonts/src/screens/maintenance/maintenance.html
+++ b/maxonts/src/screens/maintenance/maintenance.html
@@ -2,72 +2,58 @@
   <h2>Mantenimiento</h2>
   <div>
     <form submit.trigger="addElement()">
-      <select name="type" value.bind="opt" id="type">
-        <option model.bind="1">Consumible</option>
-        <option model.bind="0">Herramienta</option>
-      </select>
-      <button type="submit" class="btn btn-primary"> Añadir + </button>
+      <div class="search">
+        <select value.bind="opt" class="form-control">
+          <option model.bind="1">Consumible</option>
+          <option model.bind="0">Herramienta</option>
+        </select>
+        <button type="submit" class="btn btn-primary"> Añadir + </button>
+      </div>
       <form>
         <div>
-
-          <div>
+          <div if.bind="consumibles.length > 0">
             <h3> Consumible</h3>
             <li repeat.for="item of consumibles.length">
               <div class="filters">
-                <label for="exampleFormControlInput1" class="form-label"># de Consumible
-
-                  <input type="text" class="form-control" input.delegate="updateData(item,1)" id="exampleFormControlInput1" value.bind="$parent.consumibles[item]['idConsumible']">
+                <label for="exampleFormControlInput1" class="form-label"># de Consumible <input type="text" class="form-control" input.delegate="updateData(item,1)" id="exampleFormControlInput1" value.bind="$parent.consumibles[item]['idConsumible']">
                 </label>
-                <label for="exampleFormControlInput2" class="form-label"># Parte
-
-                  <input type="text" class="form-control" id="exampleFormControlInput2" value.bind="$parent.consumibles[item]['idParte']">
+                <label for="exampleFormControlInput2" class="form-label"># Parte <input type="text" class="form-control" id="exampleFormControlInput2" value.bind="$parent.consumibles[item]['idParte']">
                 </label>
-                <label for="exampleFormControlInput3" class="form-label">Cantidad
-
-                  <input type="text" class="form-control" id="exampleFormControlInput3" value.bind="$parent.consumibles[item]['cantidad']">
+                <label for="exampleFormControlInput3" class="form-label">Cantidad <input type="text" class="form-control" id="exampleFormControlInput3" value.bind="$parent.consumibles[item]['cantidad']">
                 </label>
               </div>
               <div class="filters">
-                <label for="exampleFormControlInput4" class="form-label">Comentatario
-
-                  <input type="text" class="form-control" id="exampleFormControlInput4" value.bind="$parent.consumibles[item]['comentario']">
+                <label for="exampleFormControlInput4" class="form-label">Comentatario <input type="text" class="form-control" id="exampleFormControlInput4" value.bind="$parent.consumibles[item]['comentario']">
                 </label>
-                <label for="exampleFormControlInput5" class="form-label">Area
-
-                  <input type="text" class="form-control" id="exampleFormControlInput5" value.bind="$parent.consumibles[item]['area']">
+                <label for="exampleFormControlInput5" class="form-label">Area <input type="text" class="form-control" id="exampleFormControlInput5" value.bind="$parent.consumibles[item]['area']">
                 </label>
-                <label for="control">Eliminar<input type="checkbox" name="ordered" change.delegate="removeConsu(item)"/>&nbsp; </label>
+                <label for="control">Eliminar<input type="checkbox" name="ordered" change.delegate="removeConsu(item)" />&nbsp; </label>
               </div>
             </li>
           </div>
-          <div>
+          <div if.bind="tools.length > 0">
             <h3> Herramienta</h3>
             <li repeat.for="item of tools.length">
               <div class="filters">
-                <label for="exampleFormControlInput1" class="form-label"># de Herramienta
-
-                  <input type="text" class="form-control" input.delegate="updateData(item,0)" id="exampleFormControlInput1" value.bind="$parent.tools[item]['idHerramienta']">
+                <label for="exampleFormControlInput1" class="form-label"># de Herramienta <input type="text" class="form-control" input.delegate="updateData(item,0)" id="exampleFormControlInput1" value.bind="$parent.tools[item]['idHerramienta']">
                 </label>
-                <label for="exampleFormControlInput2" class="form-label"># Parte 
-
-                  <input type="text" class="form-control" id="exampleFormControlInput2" value.bind="$parent.tools[item]['idParte']">
+                <label for="exampleFormControlInput2" class="form-label"># Parte <input type="text" class="form-control" id="exampleFormControlInput2" value.bind="$parent.tools[item]['idParte']">
                 </label>
-                <label for="exampleFormControlInput3" class="form-label">Comentario
-
-                  <input type="text" class="form-control" id="exampleFormControlInput3" value.bind="$parent.tools[item]['comentario']">
+                <label for="exampleFormControlInput3" class="form-label">Comentario <input type="text" class="form-control" id="exampleFormControlInput3" value.bind="$parent.tools[item]['comentario']">
                 </label>
               </div>
               <div class="filters">
-                <label for="exampleFormControlInput4" class="form-label">Area
-
-                  <input type="text" class="form-control" id="exampleFormControlInput4" value.bind="$parent.tools[item]['Area']">
+                <label for="exampleFormControlInput4" class="form-label">Area <input type="text" class="form-control" id="exampleFormControlInput4" value.bind="$parent.tools[item]['Area']">
                 </label>
-                <label for="control">Eliminar<input type="checkbox" name="ordered" change.delegate="removeTool(item)"/>&nbsp; </label>
+                <label for="control">Eliminar<input type="checkbox" name="ordered" change.delegate="removeTool(item)" />&nbsp; </label>
               </div>
             </li>
           </div>
-
-          <button click.delegate="commit()" class ="btn btn-secondary"type="submit" name="action"> Registrar Mantenimiento</button>
-          
-
+          <div if.bind="tools.length > 0 || consumibles.length > 0">
+            <button click.delegate="commit()" class="btn btn-secondary" type="submit" name="action"> Registrar Mantenimiento</button>
+          </div>
+        </div>
+      </form>
+    </form>
+  </div>
 </template>
