Hector se durmio creo

--- a/maxonts/src/sidebar.html
+++ b/maxonts/src/sidebar.html
@@ -4,22 +4,26 @@
       <a class="sidebar_loans" route-href="loans"> Prestamos </a>
       <a class="sidebar_returns" route-href="returns"> Devoluciones </a>
       <a class="sidebar_consults" route-href="inventory"> Inventario </a>
-      <a class="sidebar_consults" route-href="history"> Historial de Prestamos </a>
+      <a class="sidebar_consults" route-href="history"> Historial de Prestamos
+      </a>
       <a class="sidebar_consults" route-href="orders"> Pedidos </a>
-      <a class="sidebar_modifications" route-href="maintenance"> Mantenimiento </a>
+      <a class="sidebar_modifications" route-href="maintenance"> Mantenimiento
+      </a>
       <a class="sidebar_modifications" route-href="up_downs"> Altas/Bajas </a>
       <a class="sidebar_modifications" route-href="inOut"> Entrada/Salida </a>
     </div>
   </div>
   <div class="sidebar">
-    <h1 class="sidebar-title" route-href="test"> MAXON </h1>
+    <h1 class="sidebar-title"> MAXON </h1>
     <div class="d-flex flex-column sidebar_container">
       <a class="sidebar_loans" route-href="loans"> Prestamos </a>
       <a class="sidebar_returns" route-href="returns"> Devoluciones </a>
       <a class="sidebar_consults" route-href="inventory"> Inventario </a>
-      <a class="sidebar_consults" route-href="history"> Historial de Prestamos </a>
+      <a class="sidebar_consults" route-href="history"> Historial de Prestamos
+      </a>
       <a class="sidebar_consults" route-href="orders"> Pedidos </a>
-      <a class="sidebar_modifications" route-href="maintenance"> Mantenimiento </a>
+      <a class="sidebar_modifications" route-href="maintenance"> Mantenimiento
+      </a>
       <a class="sidebar_modifications" route-href="up_downs"> Altas/Bajas </a>
       <a class="sidebar_modifications" route-href="inOut"> Entrada/Salida </a>
     </div>
