--- a/maxonts/src/screens/login/login.html
+++ b/maxonts/src/screens/login/login.html
@@ -1,7 +1,8 @@
 <template>
   <div class="login container d-flex justify-content-center align-items-center">
     <div class="container border border-dark d-flex flex-column">
-      <h4>Iniciar Sesion</h4> <a route-href="register"> To register page </a>
+      <h4>Iniciar Sesion</h4> <a class='link-primary' route-href="register"> To
+        register page </a>
       <form>
         <div class="mb-3">
           <label for="email" class="form-label">Nombre de Usuario</label>
