--- a/maxonts/src/login/login.html
+++ b/maxonts/src/login/login.html
@@ -1,20 +1,21 @@
 <template>
-  <div class="login container d-flex justify-content-center align-items-center">
-    <div class="container border border-dark d-flex flex-column">
-      <h4>Iniciar Sesion</h4> <a route-href="register"> To register page </a>
-      <form>
-        <div class="mb-3">
-          <label for="email" class="form-label">Nombre de Usuario</label>
-          <input type="email" class="form-control" value.bind="username">
-        </div>
-        <div class="mb-3">
-          <label for="password" class="form-label">Contraseña</label>
-          <input type="password" class="form-control" value.bind="password">
-        </div>
-
-        <button class="btn btn-primary" click.trigger="submit()">Submit</button>
-      </form>
+  <div class="login_page">
+    <!-- <h1>MAXON Inventario - Iniciar Sesión</h1> -->
+    <div class="login container d-flex justify-content-center align-items-center">
+      <div class="container border border-dark d-flex flex-column">
+        <h4>Iniciar Sesion</h4> <a route-href="register"> To register page </a>
+        <form>
+          <div class="mb-3">
+            <label for="email" class="form-label">Nombre de Usuario</label>
+            <input type="email" class="form-control" value.bind="username">
+          </div>
+          <div class="mb-3">
+            <label for="password" class="form-label">Contraseña</label>
+            <input type="password" class="form-control" value.bind="password">
+          </div>
+          <button class="btn btn-primary" click.trigger="submit()">Submit</button>
+        </form>
+      </div>
     </div>
-
   </div>
 </template>
