--- a/maxonts/src/screens/up_downs/up_downs.html
+++ b/maxonts/src/screens/up_downs/up_downs.html
@@ -80,7 +80,7 @@
           </div>
           
       </div>
-      <button click.delegate="commitDown()">Guardar Cambios</button>
+      <button click.trigger="commitDown()">Guardar Cambios</button>
     </form>
     
   </div>
