algo before merge

--- a/maxonts/src/screens/register/register.html
+++ b/maxonts/src/screens/register/register.html
@@ -1,8 +1,11 @@
 <template>
   <div class="login container d-flex justify-content-center align-items-center">
-    <div class="container border border-dark d-flex flex-column">
-      <h4>Registrar usuario</h4> <a class='link-primary' route-href="login"> To
-        login page </a>
+    <div class="container border border-dark d-flex flex-column p-3">
+      <h4>Registrar usuario</h4>
+      <p>
+        Tienes una cuenta? <a class='link-primary' route-href="login"> Inicia
+          sesión </a>
+      </p>
       <form>
         <div class="mb-3">
           <label for="name" class="form-label">Nombre de Usuario</label>
