--- a/maxonts/src/screens/In-Out/inOut.html
+++ b/maxonts/src/screens/In-Out/inOut.html
@@ -16,6 +16,60 @@
       </select>
       <button type="submit" class="btn btn-primary"> Añadir + </button>
       <form>
+        <div if.bind="opt">
+          <div class="filters">
+            <label> Nombre
+              <select value.bind="property" change.delegate="matchParte(1,property)">
+                <option model.bind="null">Seleccionar</option>
+                <option repeat.for="name of NombresDeConsumibles" model.bind="name">${name}</option>
+              </select>
+            </label>
+  
+            <label> No Parte
+              <select value.bind="ConsumibleSelected" change.delegate="matchId(1,ConsumibleSelected)">
+                <option model.bind="null">Seleccionar</option>
+                <option repeat.for="item of matchesConsumibles" model.bind="item">${item}</option>
+              </select>
+            </label>
+  
+            <label> idConsumible
+              <select value.bind="IDConsumibleSelected">
+                <option model.bind="null">Selecciona</option>
+                <option repeat.for="item of matchesIdConsumibles" , model.bind='item'>${item}</option>
+              </select>
+            </label>
+            <label>Añadir <button click.delegate="AddCustom(1)"> + </button> </label>
+          </div>
+          
+        </div>
+        <div if.bind="!opt">
+          <div class="filters">
+            <label> Nombre
+              <select value.bind="props" change.trigger="matchParte(0,props)">
+                <option model.bind="null">Seleccionar</option>
+                <option repeat.for="name of NombresDeHerramientas" model.bind="name">${name}</option>
+              </select>
+            </label>
+
+            <label> No Parte
+              <select value.bind="HerramientaSelected" change.trigger="matchId(0,HerramientaSelected)">
+                <option model.bind="null">Seleccionar</option>
+                <option repeat.for="item of matchesHerramientas" model.bind="item">${item}</option>
+              </select>
+            </label>
+
+            <label> idHerramienta
+              <select value.bind="IDHerramientaSelected">
+                <option model.bind="null">Seleccionar</option>
+                <option repeat.for="item of matchesIdHerramientas" , model.bind='item'>${item}</option>
+              </select>
+            </label>
+            <label>Añadir
+              <button click.delegate="AddCustom(0)"> +</button>
+            </label>
+          </div>
+          
+        </div>
         <div>
           <div>
             <h3> Consumible</h3>
@@ -23,11 +77,11 @@
               <div class="filters">
                 <label for="exampleFormControlInput1" class="form-label"># de Consumible
 
-                  <input type="text" class="form-control" id="exampleFormControlInput1" value.bind="$parent.consumibles[item]['idConsumible']">
+                  <input type="text" input.delegate="updateData(item,1)" class="form-control" id="exampleFormControlInput1" value.bind="$parent.consumibles[item]['idConsumible']">
                 </label>
                 <label for="exampleFormControlInput2" class="form-label"># Parte
 
-                  <input type="text" class="form-control" id="exampleFormControlInput2" value.bind="$parent.consumibles[item]['idParte']">
+                  <input disabled type="text" class="form-control" id="exampleFormControlInput2" value.bind="$parent.consumibles[item]['idParte']">
                 </label>
                 <label for="exampleFormControlInput3" class="form-label">Cantidad
 
@@ -41,13 +95,13 @@
             <h3> Herramientas</h3>
             <li repeat.for="item of tools.length">
               <div class="filters">
-                <label for="exampleFormControlInput1" class="form-label"># de Herramienta
+                <label for="exampleFormControlInput1"  class="form-label"># de Herramienta
 
-                  <input type="text" class="form-control" id="exampleFormControlInput1" value.bind="$parent.tools[item]['idHerramienta']">
+                  <input type="text" input.delegate="updateData(item,0)" class="form-control" id="exampleFormControlInput1" value.bind="$parent.tools[item]['idHerramienta']">
                 </label>
                 <label for="exampleFormControlInput2" class="form-label"># Parte 
 
-                  <input type="text" class="form-control" id="exampleFormControlInput2" value.bind="$parent.tools[item]['idParte']">
+                  <input type="text" disabled class="form-control" id="exampleFormControlInput2" value.bind="$parent.tools[item]['idParte']">
                 </label>
                 <label for="control">Eliminar<input type="checkbox" name="ordered" change.delegate="removeTool(item)"/>&nbsp; </label>
               </div>
