--- a/maxonts/src/screens/inventory/inventory.html
+++ b/maxonts/src/screens/inventory/inventory.html
@@ -55,6 +55,7 @@
         <th scope="col">Minimo</th>
         <th scope="col">Maximo</th>
         <th scope="col">Prestado</th>
+        <th scope="col">En Mantenimiento</th>
         <th scope="col">Disponible</th>
       </tr>
     </thead>
@@ -67,6 +68,7 @@
         <td>${record.Minimo}</td>
         <td>${record.Maximo}</td>
         <td>${amount(record.Prestados)}</td>
+        <td>${amount(record.Mantenimiento)}</td>
         <td>${amount(record.Disponible)}</td>
       </tr>
     </tbody>
