--- a/maxonts/src/screens/outs_register/outs.html
+++ b/maxonts/src/screens/outs_register/outs.html
@@ -1,8 +1,8 @@
 
 <template>
-
     <button click.delegate="redirect()" >Registrar Entradas/Salidas</button>
-
+    <button click.trigger="changeData()"> Cambiar a ${titulo} </button>
+    <h1>${titulo}</h1>
 <h3>Herramientas</h3>
 <table class="table table-hover">
     <thead>
@@ -18,17 +18,21 @@
     </thead>
     <tbody>
       <tr repeat.for="record of tools">
-        <td></td>
-        <td>${record.idSalida}</td>
+        <td>${record.idSalida}${record.idEntrada} </td>
         <td>${record.idParte}</td>
         <td>${record.idHerramienta}</td>
-        <td>${record.Descripcion}</td>
-        <td>${record.Nombre}</td>
-        <td>${record.fecha}</td>
+        <td>${record.descripcion}</td>
+        <td>${record.nombre}</td>
+        <td>${moment(record.fecha).format('DD/MM/YYYY')}</td>
         <td>${record.comentario}</td>
       </tr>
     </tbody>
   </table>
+  <p>Next/Previous buttons:</p>
+<div class="pagination">
+  <a click.delegate="pagination(0,0)">❮</a>
+  <a click.delegate="pagination(0,1)">❯</a>
+</div>
   <h3>Consumibles</h3>
   <table class="table table-hover">
     <thead>
@@ -36,6 +40,7 @@
         <th scope="col">#Registro</th>
         <th scope="col">#Parte</th>
         <th scope="col">#Consumible</th>
+        <th scope="col">Nombre</th>
         <th scope="col">#Cantidad</th>
         <th scope="col">Registró</th>
         <th scope="col">Fecha</th>
@@ -44,13 +49,21 @@
     </thead>
     <tbody>
       <tr repeat.for="record of consumibles">
-        <td></td>
-        <td>${record.idEmpleado}</td>
-        <td>${mapStatus(record.status)}</td>
-        <td>${idToUser(record.idUsuario)}</td>
+        <td>${record.idSalida}${record.idEntrada}</td>
+        <td>${record.idParte}</td>
+        <td>${record.idconsumible}</td>
+        <td>${record.cantidad}
+        <td>${record.Descripcion}</td>
+        <td>${record.nombre}</td>
         <td>${moment(record.fecha).format('DD/MM/YYYY')}</td>
+        <td>${record.comentario}</td>
       </tr>
     </tbody>
   </table>
+  <p>Next/Previous buttons:</p>
+<div class="pagination">
+  <a click.trigger="pagination(1,0)">❮</a>
+  <a click.trigger="pagination(1,1)">❯</a>
+</div>
 </template>
 
