--- a/maxonts/src/screens/up_downs/up_downs.html
+++ b/maxonts/src/screens/up_downs/up_downs.html
@@ -79,12 +79,12 @@
 
         <div class="mb-3 filters">
           <label class="form-label">Familia
-            <input type="text" value.bind="down[i]['Familia']" class="form-control">
+            <input type="text" disabled value.bind="down[i]['Familia']" class="form-control">
           </label>
 
 
           <label class="form-label">Nombre/Descripcion
-            <input type="text" value.bind="down[i]['Descripcion']" class="form-control">
+            <input type="text" disabled value.bind="down[i]['Descripcion']" class="form-control">
           </label>
           <label>Eliminar
             <input class="form-check-input" change.delegate="removeDown(i)" type="checkbox" id="inlineCheckbox2">
