--- a/maxonts/src/screens/maintenance/maintenance.html
+++ b/maxonts/src/screens/maintenance/maintenance.html
@@ -71,12 +71,12 @@
           </div>
 
           <div if.bind="consumibles.length > 0">
-            
+            <h3> Consumibles</h3>
             <li repeat.for="item of consumibles.length">
               <div class="filters">
                 <label for="exampleFormControlInput1" class="form-label"># de Consumible <input type="text" class="form-control" input.delegate="updateData(item,1)" id="exampleFormControlInput1" value.bind="$parent.consumibles[item]['idConsumible']">
                 </label>
-                <label for="exampleFormControlInput2" class="form-label"># Parte <input type="text" class="form-control" id="exampleFormControlInput2" value.bind="$parent.consumibles[item]['idParte']">
+                <label for="exampleFormControlInput2" class="form-label"># Parte <input disabled type="text" class="form-control" id="exampleFormControlInput2" value.bind="$parent.consumibles[item]['idParte']">
                 </label>
                 <label for="exampleFormControlInput3" class="form-label">Cantidad <input type="text" class="form-control" id="exampleFormControlInput3" value.bind="$parent.consumibles[item]['cantidad']">
                 </label>
@@ -96,7 +96,7 @@
               <div class="filters">
                 <label for="exampleFormControlInput1" class="form-label"># de Herramienta <input type="text" class="form-control" input.delegate="updateData(item,0)" id="exampleFormControlInput1" value.bind="$parent.tools[item]['idHerramienta']">
                 </label>
-                <label for="exampleFormControlInput2" class="form-label"># Parte <input type="text" class="form-control" id="exampleFormControlInput2" value.bind="$parent.tools[item]['idParte']">
+                <label for="exampleFormControlInput2" class="form-label"># Parte <input disabled type="text" class="form-control" id="exampleFormControlInput2" value.bind="$parent.tools[item]['idParte']">
                 </label>
                 <label for="exampleFormControlInput3" class="form-label">Comentario <input type="text" class="form-control" id="exampleFormControlInput3" value.bind="$parent.tools[item]['comentario']">
                 </label>
