--- a/maxonts/src/screens/loan_history/history.html
+++ b/maxonts/src/screens/loan_history/history.html
@@ -8,6 +8,10 @@
         <input value.bind="query.idEmpleado" type="text" class="form-control" id="loan_info_employee">
       </div>
       <div>
+        <label for="loan_info_idParte" class="form-label label"> # Parte </label>
+        <input value.bind="query.idParte" type="text" class="form-control" id="loan_info_idParte">
+      </div>
+      <div>
         <label for="Status">Estado</label>
         <select value.bind="query.status" name="status" id="stats" class="form-control">
           <option value="" selected>Seleccionar</option>
