--- a/maxonts/src/screens/maintenance/maintenance.html
+++ b/maxonts/src/screens/maintenance/maintenance.html
@@ -102,7 +102,7 @@
                 </label>
               </div>
               <div class="filters">
-                <label for="exampleFormControlInput4" class="form-label">Area <input type="text" class="form-control" id="exampleFormControlInput4" value.bind="$parent.tools[item]['Area']">
+                <label for="exampleFormControlInput4" class="form-label">Area <input type="text" class="form-control" id="exampleFormControlInput4" value.bind="$parent.tools[item]['area']">
                 </label>
                 <label for="control">Eliminar<input type="checkbox" name="ordered" change.delegate="removeTool(item)" />&nbsp; </label>
               </div>
