--- a/maxonts/src/screens/loans_info/loans_info.html
+++ b/maxonts/src/screens/loans_info/loans_info.html
@@ -69,5 +69,5 @@
   </div>
   <form if.bind="!readonly">
     <button class="btn btn-primary" click.delegate="commitChanges()" type="submit">Guardar Cambios</button>
-  </form>
+  </div>
 </template>
