--- a/maxonts/src/screens/login/login.html
+++ b/maxonts/src/screens/login/login.html
@@ -3,7 +3,7 @@
     <div class="container border border-dark d-flex flex-column">
       <h4>Iniciar Sesion</h4> <a class='link-primary' route-href="register"> To
         register page </a>
-      <form>
+      <div>
         <div class="mb-3">
           <label for="email" class="form-label">Nombre de Usuario</label>
           <input type="email" class="form-control" value.bind="username">
@@ -14,7 +14,7 @@
         </div>
 
         <button class="btn btn-primary" click.trigger="submit()">Submit</button>
-      </form>
+      </div>
     </div>
 
   </div>
