--- a/maxonts/src/screens/maintenance/maintenance.html
+++ b/maxonts/src/screens/maintenance/maintenance.html
@@ -9,7 +9,7 @@
         </select>
         <button type="submit" class="btn btn-primary"> Añadir + </button>
       </div>
-      <form>
+      <div>
         <div>
           <div if.bind="opt ==1">
             <h3> Consumible</h3>
@@ -112,7 +112,7 @@
             <button click.delegate="commit()" class="btn btn-secondary" type="submit" name="action"> Registrar Mantenimiento</button>
           </div>
         </div>
-      </form>
-    </form>
+      </div>
+    </div>
   </div>
 </template>
