--- a/maxonts/src/screens/orders/orders.html
+++ b/maxonts/src/screens/orders/orders.html
@@ -24,7 +24,7 @@
       </div>
       <button class="btn btn-primary" type="submit">Buscar</button>
     </div>
-  </form>
+  </div>
 
   <h2> Resultados </h2>
 
