--- a/maxonts/src/screens/test/test.html
+++ b/maxonts/src/screens/test/test.html
@@ -2,6 +2,6 @@
   
 <form submit.delegate="run()">
     <button class="btn btn-primary" type="submit">Buscar</button>
-  </form>
+  </div>
 
 </template>
