--- a/maxonts/src/sidebar.html
+++ b/maxonts/src/sidebar.html
@@ -14,7 +14,9 @@
     </div>
   </div>
   <div class="sidebar">
-    <h1 class="sidebar-title"> MAXON </h1>
+    <h1 class="sidebar-title" > <img  style="width: 20vw;" src="../11283_47706.jpg"> </h1>
+
+
     <div class="d-flex flex-column sidebar_container">
       <a class="sidebar_loans" route-href="loans"> Prestamos </a>
       <a class="sidebar_returns" route-href="returns"> Devoluciones </a>
