--- a/maxonts/src/screens/inventory/inventory.html
+++ b/maxonts/src/screens/inventory/inventory.html
@@ -27,7 +27,7 @@
         <button class="btn btn-primary" type="submit">Buscar</button>
       </div>
     </div>
-  </form>
+  </div>
 
   <form submit.delegate="sort()">
     <b>Ordenar</b>
@@ -42,7 +42,7 @@
       </div>
       <button class="btn btn-primary" type="submit">Ordenar</button>
     </div>
-  </form>
+  </div>
   <h2> Resultados </h2>
   <!-- TODO: tabla -->
   <table class="table table-hover">
