--- a/maxonts/src/screens/loan_history/history.html
+++ b/maxonts/src/screens/loan_history/history.html
@@ -34,7 +34,7 @@
       </div>
     </div>
     <!-- END SEARCH FILTERS -->
-  </form>
+  </div>
   <h2> Resultados </h2>
   <!-- TODO: tabla -->
   <table class="table table-hover">
