--- a/maxonts/src/screens/newIn/newIn.html
+++ b/maxonts/src/screens/newIn/newIn.html
@@ -8,7 +8,7 @@
           <option model.bind="0">Herramienta</option>
         </select>
         <button type="submit" class="btn btn-primary"> Añadir + </button>
-        <form>
+        <div>
           <div >
             <div class="filters">
               <label> Nombre
@@ -82,8 +82,8 @@
               </li>
             </div>
             </div>
-        </form>
-      </form>
+        </div>
+      </div>
     </div>
     <button click.trigger="commit()"type="submit" class="btn btn-primary"> Registrar Entrada </button>
   
