--- a/maxonts/src/app.html
+++ b/maxonts/src/app.html
@@ -5,7 +5,7 @@
   <main>
     <section class="d-flex flex-row">
       <sidebar class="col-3"></sidebar>
-      <router-view class="col-9 router_view"></router-view>
+      <router-view class="col-9 router_view bg-grayish"></router-view>
     </section>
   </main>
 
