--- a/maxonts/src/screens/loadEmployees/load.html
+++ b/maxonts/src/screens/loadEmployees/load.html
@@ -1,4 +1,4 @@
 <template>
-    <input  type="file" accept=".csv" files.bind="data" />
-    <button click.delegate="load()">CLICK ME</button>
+  <input type="file" accept=".csv" files.bind="data" />
+  <button click.delegate="load()" class="btn btn-primary">CLICK ME</button>
 </template>
