--- a/maxonts/src/screens/outs_register/outs.html
+++ b/maxonts/src/screens/outs_register/outs.html
@@ -1,10 +1,11 @@
-
 <template>
-    <button click.delegate="redirect()" >Registrar Entradas/Salidas</button>
-    <button click.trigger="changeData()"> Cambiar a ${titulo} </button>
-    <h1>${titulo}</h1>
-<h3>Herramientas</h3>
-<table class="table table-hover">
+  <button class="grayish-button" click.delegate="redirect()">Registrar
+    Entradas/Salidas</button>
+  <button class="grayish-button" click.trigger="changeData()"> Cambiar a
+    ${titulo} </button>
+  <h1>${titulo}</h1>
+  <h3>Herramientas</h3>
+  <table class="table table-hover">
     <thead>
       <tr>
         <th scope="col">#Registro</th>
@@ -29,10 +30,10 @@
     </tbody>
   </table>
   <p>Next/Previous buttons:</p>
-<div class="pagination">
-  <a click.delegate="pagination(0,0)">❮</a>
-  <a click.delegate="pagination(0,1)">❯</a>
-</div>
+  <div class="pagination">
+    <a click.delegate="pagination(0,0)">❮</a>
+    <a click.delegate="pagination(0,1)">❯</a>
+  </div>
   <h3>Consumibles</h3>
   <table class="table table-hover">
     <thead>
@@ -61,9 +62,8 @@
     </tbody>
   </table>
   <p>Next/Previous buttons:</p>
-<div class="pagination">
-  <a click.trigger="pagination(1,0)">❮</a>
-  <a click.trigger="pagination(1,1)">❯</a>
-</div>
+  <div class="pagination">
+    <a click.trigger="pagination(1,0)">❮</a>
+    <a click.trigger="pagination(1,1)">❯</a>
+  </div>
 </template>
-
